--- a/frontend/src/css/LandingPage.css
+++ b/frontend/src/css/LandingPage.css
@@ -1,5 +1,4 @@
 body {
-    /* background-image: url(../images/abt_bg.jpg); */
     background-size: cover;
     background-attachment: fixed;
 }
@@ -7,9 +6,9 @@ body {
 .main {
     height: 100vh;
     width: 100vw;
-    /* background-color: rgb(3, 3, 3); */
     background-image: url(../images/main_bg.jpg);
     background-size: cover;
+    background-position: center;
 }
 
 .BodyB {
@@ -23,16 +22,16 @@ body {
 .mainText {
     margin-left: 6vw;
     height: 80vh;
-    width: 48vw;
-    /* background-color: aqua; */
+    width: 70%;
     float: left;
     margin-top: 20vh;
 }
 
 .toptext {
-    /* text-shadow: 2px 2px 0px  #fcf9f9, -2px -2px 0px  #f7f6f6, 2px -2px 0px  #f5f5f5, -2px 2px 0px  #f8f4f4; */
     color: rgb(245, 242, 242);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 4rem;
+    margin-top: 10%;
     margin: 0;
     padding: 0;
     padding-bottom: 2rem;
@@ -50,7 +49,6 @@ h3,
 .ft {
     margin: 0;
     padding: 0;
-    /* text-shadow: 2px 2px 0px #f5f1f1, -2px -2px 0px #f1efef, 2px -2px 0px #f4f7f5, -2px 2px 0px #fdfcfc; */
     color: orangered;
     text-shadow: 3px 3px #ff0202;
     font-family: 'Arial';
@@ -58,23 +56,12 @@ h3,
     font-weight: bold;
 }
 
-.ft {
-    /* font-family: sans-serif; */
-    /* font-weight: 800; */
-    /* text-align: center; */
-    /* display: flex; */
-    /* justify-content: center; */
-    /* align-items: center; */
-    /* min-height: 100vh; */
-}
+
 
 .abt_div {
-    width: 100vw;
-    height: 120vh;
-    /* background-color: aqua; */
-    /* background-image: url(../images/abt_bg.jpg); */
+    width: 100%;
+    height: 100%;
     background-color: black;
-    /* background-image: radial-gradient(rgb(53, 52, 52), rgb(12, 10, 8), rgb(6, 6, 7)); */
     background-size: cover;
     background-position: right;
     display: block;
@@ -83,7 +70,6 @@ h3,
 .about {
     width: 55vw;
     height: 70vh;
-    /* background-color: rgba(13, 4, 22, 0.7); */
     background-image: radial-gradient(rgb(53, 52, 52), rgb(12, 10, 8), rgb(6, 6, 7));
     text-align: center;
     margin: 10vh 0 0 4vw;
@@ -98,25 +84,20 @@ h3,
 }
 
 .abt_img {
-    margin-left: 90vh;
+    text-align: center;
     margin-top: 20vh;
-    /* width: 40vw;
-    height: 0vh; */
-    /* background-color: #f5f1f1; */
 }
 
 .bb_img {
     width: 60vh;
     height: 60vh;
     margin-left: 5vw;
-    /* background-color: #f1efef; */
 }
 
 .abt_h1 {
     padding-top: 5vh;
     color: orangered;
     font-size: 2.5rem;
-    /* font-family: cursive; */
 }
 
 .abt_p {
@@ -124,27 +105,23 @@ h3,
     text-align: justify;
     padding: 7vh;
     font-size: 1.4rem;
-    /* font-family: cursive; */
 }
 
 .contact_div {
     margin: 0;
     width: 100vw;
     height: 100vh;
-    background-image: url(../images/contact.mp4);
+    /* background-image: url(../images/contact.mp4); */
     background-size: cover;
-    /* background-color: black; */
 }
 
 .videoTag {
     z-index: -1;
-    /* height: 100%;
-    width: 100%; */
     float: left;
     top: 0;
     padding: none;
+    /* position: static; */
     position: fixed;
-    /* optional depending on what you want to do in your app */
 
 
 }
@@ -153,7 +130,6 @@ h3,
     width: 50vw;
     height: 80vh;
     margin-left: 45vw;
-    /* margin-top: 10vh; */
 
 }
 
@@ -164,14 +140,12 @@ h3,
     color: rgb(226, 223, 223);
     font-size: 1rem;
     margin: .5vh;
-    /* margin-top: 25vh; */
     width: 22vw;
     height: 7vh;
     border-radius: 10px;
 }
 
 .contact_text {
-    /* background-color: transparent; */
     background-color: rgba(255, 255, 255, 0.1);
     border: 2px solid orangered;
     color: rgb(255, 255, 255);
@@ -187,7 +161,6 @@ h3,
     color: rgb(255, 255, 255);
     background-color: black;
     font-size: 1.5rem;
-    /* font-family: 'Courier New', Courier, monospace; */
     margin-top: 5vh;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin-left: .5vw;
@@ -202,13 +175,11 @@ h3,
 .submit-contact:hover {
     background-color: orangered;
     color: rgb(7, 6, 6);
-    /* border: 2px solid rgb(12, 11, 11); */
     transform: scaleX(1);
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 27px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
 .contact_h1 {
-    /* float: left; */
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
     font-size: 1.5rem;
@@ -218,12 +189,10 @@ h3,
     width: 40vw;
     height: 80vh;
     display: inline-flex;
-    /* background-color: #070a08; */
     color: white;
 }
 
 .h1_cnt {
-    /* background-color: #0a0707; */
     padding-top: 20vh;
     padding-bottom: 3vh;
     margin-bottom: 0;
@@ -237,5 +206,98 @@ h3,
     margin-top: 5vh;
     margin-left: 6vw;
     height: 60vh;
-    /* background-color: #f1efef; */
+}
+
+
+
+
+@media (max-width: 768px) {
+
+    .mainText {
+        margin-top: 5vh;
+    }
+
+    .toptext {
+        margin-top: 10%;
+        font-size: 2.5rem;
+    }
+
+    .ft {
+        font-size: 4rem;
+    }
+
+    .about {
+        margin-bottom: 20px;
+        width: 90%;
+        height: 60%;
+        background-image: radial-gradient(rgb(53, 52, 52), rgb(12, 10, 8), rgb(6, 6, 7));
+        text-align: center;
+        /* margin: 10vh 0 0 4vw; */
+        border-radius: 50px;
+        border: 2px solid orangered;
+        /* float: left; */
+        transition: box-shadow .7s;
+    }
+
+    .abt_img {
+        margin-left: 20px;
+        margin-top: 10px;
+    }
+
+    .bb_img {
+        height: 50vw;
+        width: 50vw;
+    }
+
+
+    .contact_div {
+        justify-content: center;
+        margin: 0;
+        width: 100vw;
+        height: 100vh;
+        /* background-color: black; */
+        background-image: url(../images/contact.mp4);
+        background-size: cover;
+    }
+
+    .contact_form {
+        width: 100vw;
+        height: 80vh;
+        margin-left: 0;
+
+    }
+
+    .contact_input {
+        background-color: rgba(15, 14, 14, 0.4);
+        border: 2px solid orangered;
+
+        color: rgb(226, 223, 223);
+        font-size: 1rem;
+        margin: .5vh;
+        width: 91%;
+        height: 7vh;
+        border-radius: 10px;
+    }
+
+    .contact_text {
+        background-color: rgba(15, 14, 14, 0.4);
+    }
+
+
+    .h1_cnt {
+        margin-top: 0;
+        padding-top: 10%;
+    }
+
+    .submit-contact {
+        width: 50%;
+        margin-left: 25%;
+    }
+
+    .videoTag {
+        float: right;
+        position: fixed;
+    }
+
+
 }
