--- a/frontend/src/css/Login.css
+++ b/frontend/src/css/Login.css
@@ -5,7 +5,7 @@
     text-align: center;
     height: 100vh;
     width: 100vw;
-    /* background-color: black; */
+    background-color: black;
     /* background-image: url(../images/login_bg.jpg);
     background-size: cover;
     background-position: center;
@@ -27,7 +27,7 @@
 }
 
 
-.login_form {}
+/* .login_form {} */
 
 .login_input {
     color: white;
@@ -40,7 +40,6 @@
 }
 
 .sign_input {
-    outline: none;
     color: white;
     margin-top: 5%;
     width: 70%;
@@ -48,4 +47,8 @@
     height: 5vh;
     background: transparent;
     border: 0px;
+}
+
+.submit-login {
+    width: 20%;
 }
