--- a/frontend/src/css/features.css
+++ b/frontend/src/css/features.css
@@ -1,14 +1,13 @@
 .features_div {
-    width: 100vw;
-    height: 331vh;
+    width: 100%;
+    height: 340vh;
     background-color: black;
 }
 
 .featur_h1 {
-    padding-top: 5vh;
+    padding-top: 10vh;
     padding-bottom: 5vh;
     text-align: center;
-    /* color: rgb(122, 121, 121); */
     background-image: radial-gradient(rgb(53, 52, 52), rgb(12, 10, 8), rgb(6, 6, 7));
     /* font-family: "Dancing Script", cursive; */
     font-size: 4rem;
@@ -65,7 +64,8 @@
 .card_div {
     display: flex;
     flex-wrap: wrap;
-    /* flex-direction:; */
+    flex-direction: row;
+
 }
 
 
@@ -87,5 +87,82 @@
 .easy_img {
     margin-left: 5vh;
     width: 40%;
+
+}
+
+
+
+
+
+
+
+@media (max-width: 768px) {
+    .features_div {
+        height: 360vh;
+    }
+
+    .card_div {
+        margin-top: 10%;
+        justify-content: center;
+        /* text-align: center;
+        align-items: center; */
+        display: grid;
+        grid-template-columns: 48% 48%;
+        column-gap: 10px;
+        /* flex-wrap: wrap; */
+    }
+
+    .card1 {
+        display: grid;
+        margin-left: 2%;
+        width: 22vw;
+        height: 60vh;
+    }
+
+    .card2 {
+        display: grid;
+        margin-left: 2%;
+        width: 20vw;
+        height: 60vh;
+    }
+
+    .card3 {
+        display: grid;
+        margin-left: 2%;
+        width: 20vw;
+        height: 60vh;
+    }
+
+    .card4 {
+        display: grid;
+        margin-left: 2%;
+        width: 20vw;
+        height: 60vh;
+        margin-top: 0vw;
+    }
+
+    .card5 {
+        margin-top: 0;
+        display: grid;
+        margin-left: 2%;
+        width: 20vw;
+        height: 60vh;
+    }
+
+    .feature_last {
+        height: 30vh;
+        width: 70vw;
+        margin-left: 15vw;
+        /* background-color: aliceblue; */
+        margin-top: 10%;
+        display: flex;
+    }
+
+    .easy {
+        width: 50%;
+        height: 100%;
+        /* background-color: aqua; */
+    }
+
 
 }
