--- a/frontend/src/css/topbar.css
+++ b/frontend/src/css/topbar.css
@@ -32,11 +32,11 @@
     color: antiquewhite;
     border: 2px solid rgb(255, 255, 255);
     border-radius: 10px;
-    width: 50%;
+    width: 100%;
     height: 60%;
+    font-weight: bold;
     text-align: center;
     background-color: transparent;
-    font-weight: bold;
     transition: background-color .3s;
 }
 
@@ -44,4 +44,26 @@
     cursor: pointer;
     background-color: white;
     color: orangered;
+}
+
+@media (max-width: 768px) {
+    .logout {
+        color: antiquewhite;
+        border: 2px solid rgb(255, 255, 255);
+        border-radius: 10px;
+        width: 170%;
+        height: 60%;
+        font-size: .5rem;
+        text-align: center;
+        background-color: transparent;
+        transition: background-color .3s;
+    }
+
+    .top_h1 {
+        margin-top: 10px;
+    }
+
+    .topbar {
+        width: 181vw;
+    }
 }
